--- a/step/step_05_js/css/login.css
+++ b/step/step_05_js/css/login.css
@@ -7,5 +7,14 @@
 .close_box>button{width: 2rem;height: 16px;float:right;background-color:transparent;font-size:1rem;position:relative;}
 
 .close_box>button::before{content:"";display:block;border:6px solid transparent;border-bottom-color: #333;position:absolute;left:-10px;width: 0;height: 0;} 
-#loginBox>form{width: 100%;height: 100px;position:absolute;top:0;padding:3rem 0.9375rem 0.5rem;box-sizing:border-box;}
 
+#loginBox>form{width: 100%;height: 100px;position:absolute;top:0;padding:1.5rem 0.9375rem 0.5rem;box-sizing:border-box;}
+
+#loginBox fieldset{width: 100%;height:auto;}
+#loginBox fieldset:first-of-type{margin-bottom:0.5rem;}
+/* #loginBox fieldset:nth-of-type(3n){} */
+
+
+#user,#pwd{width:9.625rem;height:1.375rem;float:left;}
+#user{margin-bottom:0.375rem;}
+#ok{width:3.5rem;height: 3.125em;background-color:#f06;margin-top:-1.75rem;float:right;}
