--- a/step/step_05_js/css/login.css
+++ b/step/step_05_js/css/login.css
@@ -17,4 +17,4 @@
 
 #user,#pwd{width:9.625rem;height:1.375rem;float:left;}
 #user{margin-bottom:0.375rem;}
-#ok{width:3.5rem;height: 3.125em;background-color:#f06;margin-top:-1.75rem;float:right;}
+#ok{width:3.5rem;height: 3.125em;background-color:#f06;margin-top:-1.75rem;float:right;text-transform:uppercase;word-spacing:-.2rem;}
