--- a/subject/seoul_asan_hospital/css/seoul_asan_hospital.css
+++ b/subject/seoul_asan_hospital/css/seoul_asan_hospital.css
@@ -24,7 +24,7 @@ header>nav>div>button{height:100%;}
 
 /* pageWrap---------------------------------- */
 
-.pageWrap:{width:100%;height:auto;}
+.pageWrap{width:100%;height:auto;}
 
 /*------ addBanner--------------------------- */
 
