--- a/portfolio/seoul_asan_hospital/css/seoul_asan_hospital.css
+++ b/portfolio/seoul_asan_hospital/css/seoul_asan_hospital.css
@@ -71,7 +71,9 @@ header>nav>div>button{height:100%;}
 
 .column{width:100%;height:800px;padding:120px 0px 90px;}
 .column>div{float:left;}
+
 /*col_leftBox*/
+
 .col_leftBox{width:50%;height:100%;background-color:#666;}
 .col_leftBox>.picture_box{width:590px;height:100%;background-color:#f0b;float:right;}
 .col_leftBox>.picture_box>div{float:left;width:50%;height:50%;background-color:#ccc;}
@@ -81,6 +83,7 @@ header>nav>div>button{height:100%;}
 .pBox_04{padding-top:15px;padding-left:15px;}
 
 /*col_rightBox*/
+
 .col_rightBox{width:50%;height:100%;background-color:#888;}
 .col_rightBox>div:nth-of-type(1){width:550px;height:555px;padding:0px 42px;background-color:#aff;}
 .col_rightBox>.introBox>p:nth-of-type(1){font-size:36px;color:#222;padding-top:20px;font-weight:200;}
@@ -109,7 +112,13 @@ header>nav>div>button{height:100%;}
 .left_side>div:nth-child(2)>p{text-align:justify-all;}
 
 /*right_side*/
+
 .right_side>.clientBox>div{float:left;}
 .right_side>.clientBox{padding-left:15%;padding-right:10%;background-color:#888;height:100%;width:100%;}
 .right_side>.clientBox>.client_img{width:100px;height:100px;background-color:#f0b;}
 .right_side>.clientBox>.client_text{width:350px;height:auto;padding-left:40px;}
+
+
+/*---------------------article------------------------*/
+
+.article{width:100%;height:600px;background-color:#fff;}
