--- a/portfolio/main_page/css/mainpage.css
+++ b/portfolio/main_page/css/mainpage.css
@@ -25,6 +25,7 @@
 .showBox{width:10%;height:100%;background-color:#000;position:fixed;top:0;right:0;z-index:100;margin-top:50px;}
 .showBox>ul{padding:20px 10px 20px;display:;}
 .showBox>ul>li{width:100%;height:auto;background-color:#fff;text-align:center;font-size:36px;}
+.showBox>ul>li:nth-of-type(n+1){margin-top:30%}
 
 /*-----------------------section------------------------*/
 section{width:100%;height:680px;background-color:#f77;margin-top:30%;}
