서울아산)메인페이지 작업 및 gulp test

--- a/portfolio/seoul_asan_hospital/css/src/mob.css
+++ b/portfolio/seoul_asan_hospital/css/src/mob.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 @media screen and (max-width: 639px) {
+  #abd {
+    font-size: 34px;
+    font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+    content: "";
+    display: block;
+    z-index: 100;
+    position: absolute;
+    -webkit-opacity: 1;
+    -moz-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
+
   #headBox {
     width: 100%;
     min-height: 60px;
@@ -43,6 +55,9 @@
     #home i {
       font-size: 40px;
       color: #518b8d; } }
+#navi {
+  display: none; }
+
 #addBanner {
   width: 100%;
   min-height: 240px;
@@ -56,9 +71,31 @@
   border-top: 2px solid #b3d6d2;
   border-bottom: 2px solid #b3d6d2; }
   #addBanner h2 {
-    font-size: 6.66667vw;
-    font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
-    color: #fff; }
+    position: absolute;
+    margin-top: 8.6666667vw; }
+    #addBanner h2 p:nth-of-type(1), #addBanner h2 p:nth-of-type(2) {
+      display: none; }
+    #addBanner h2 p {
+      font-size: 6.66667vw;
+      font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #fff;
+      margin-left: 16.66666667vw; }
+  #addBanner h3 {
+    position: absolute;
+    margin-top: 25.3333333vw; }
+    #addBanner h3 p {
+      font-weight: 200;
+      font-size: 4.66667vw;
+      font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #fff;
+      margin-left: 16.66666667vw; }
+  #addBanner h4 {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10.55555556vw;
+    font-size: 4.44444vw;
+    font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+    margin-left: 16.66666667vw; }
 
 #addBanner::after {
   content: "";
@@ -70,19 +107,31 @@
   min-height: 200px;
   height: 55.5555556vw;
   margin-top: 3.88888889vw;
-  margin-left: 1.888888vw;
+  margin-left: 3.6666667vw;
   left: 0; }
 
 #content_01 {
   width: 100%;
   height: 122.2222222vw;
-  background-color: #f07;
+  background-color: #fff;
   border-top: 2px solid #b3d6d2;
   border-bottom: 2px solid #b3d6d2; }
-  #content_01 div {
+  #content_01 .textBox_01 {
     width: 100vw;
     height: calc(100% - 90vw);
     background-color: #fff; }
+    #content_01 .textBox_01 h2 {
+      font-size: 7.77778vw;
+      font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #006769;
+      padding-left: 30.88888889vw;
+      padding-top: 5.555555556vw; }
+    #content_01 .textBox_01 h3 {
+      font-size: 3.33333vw;
+      font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #6d6e6f;
+      text-align: center;
+      margin-top: 10px; }
   #content_01 ul {
     width: 100vw;
     height: 90vw;
@@ -92,6 +141,39 @@
       height: 45vw;
       background-color: #29aae1;
       float: left; }
+      #content_01 ul li div {
+        background-color: #fff; }
+      #content_01 ul li div:nth-of-type(1) {
+        width: 100%;
+        height: 60%; }
+      #content_01 ul li div:nth-of-type(2) {
+        font-size: 6.66667vw;
+        font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+        text-align: center;
+        line-height: 2.5;
+        height: 40%; }
+      #content_01 ul li div:nth-of-type(3) {
+        display: none; }
+      #content_01 ul li .icon_01 {
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("../../img/src/icon_01.jpg"); }
+      #content_01 ul li .icon_02 {
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("../../img/src/icon_02.jpg"); }
+      #content_01 ul li .icon_03 {
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("../../img/src/icon_03.jpg"); }
+      #content_01 ul li .icon_04 {
+        background-size: 40%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-image: url("../../img/src/icon_04.jpg"); }
 
 #content_02 {
   border-top: 2px solid #b3d6d2;
