--- a/portfolio/seoul_asan_hospital/css/src/pc.css
+++ b/portfolio/seoul_asan_hospital/css/src/pc.css
@@ -1,11 +1,12 @@
+@charset "UTF-8";
 @media screen and (min-width: 960px) and (max-width: 2560px) {
   #headBox {
     max-width: 1200px;
     margin: 0 auto;
-    width: 100%;
+    width: 960px;
     height: 74px;
     position: relative;
-    background-color: #eee; }
+    background-color: #fff; }
     #headBox::after {
       content: "";
       display: block;
@@ -13,7 +14,7 @@
       position: absolute;
       width: 100vw;
       height: 80px;
-      background-color: #888;
+      background-color: #fff;
       left: 50%;
       margin-left: -50vw; }
     #headBox #menu {
@@ -22,7 +23,7 @@
       display: none; }
     #headBox h1 {
       min-width: 120px;
-      width: 230px;
+      min-width: 230px;
       height: 80px;
       left: 50%;
       position: absolute;
@@ -38,10 +39,39 @@
 
   #navi {
     max-width: 1200px;
-    width: 100%;
+    width: 960px;
     height: 100px;
-    background-color: #ccc;
-    margin: 0 auto; }
+    background-color: #ecf7f6;
+    margin: 0 auto;
+    display: block; }
+    #navi ul {
+      width: 100%;
+      height: 100%; }
+      #navi ul li {
+        position: relative;
+        font-size: 20px;
+        font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+        float: left;
+        font-weight: bold;
+        margin-top: 38px;
+        margin-left: 18px;
+        color: #518b8d; }
+        #navi ul li:nth-child(1) {
+          margin-left: 14px; }
+        #navi ul li:last-of-type::after {
+          display: none; }
+        #navi ul li::after {
+          content: "";
+          display: block;
+          z-index: 100;
+          position: absolute;
+          width: 10px;
+          height: 14px;
+          border-right: 0.8px solid #4f3f3f;
+          margin-left: 10%;
+          bottom: 20%;
+          right: 0px;
+          margin-right: -10px; }
 
   #navi::after {
     content: "";
@@ -50,23 +80,58 @@
     position: absolute;
     width: 100%;
     height: 100px;
-    background-color: #000;
-    left: 0; }
+    background-color: #ecf7f6;
+    left: 0;
+    top: 0;
+    margin-top: 74px; }
 
   #addBanner {
-    max-width: 1200px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("../../img/src/ban_640.jpg");
     margin: 0 auto;
     height: 400px;
-    width: 100%;
+    width: 960px;
     position: relative; }
+    #addBanner h2 {
+      position: absolute;
+      margin-top: 90px; }
+      #addBanner h2 p {
+        margin-left: 520px;
+        font-size: 30px;
+        font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #fff; }
+        #addBanner h2 p:nth-of-type(1), #addBanner h2 p:nth-of-type(2) {
+          display: block;
+          position: absolute;
+          left: -17%;
+          margin-top: 80px;
+          color: #006769;
+          z-index: 100; }
+        #addBanner h2 p:nth-of-type(2) {
+          margin-top: 120px; }
+    #addBanner h3 {
+      position: absolute;
+      margin-top: 180px; }
+      #addBanner h3 p {
+        font-weight: 200;
+        font-size: 20px;
+        font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #fff;
+        margin-left: 520px; }
+    #addBanner h4 {
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 80px;
+      font-size: 20px;
+      font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+      margin-left: 520px; }
     #addBanner .whiteBox {
-      width: 50%;
+      width: 206px;
       height: 100%;
-      float: left; }
+      float: left;
+      margin-left: 276px; }
       #addBanner .whiteBox .textBanner {
         -webkit-opacity: 0.7;
         -moz-opacity: 0.7;
@@ -84,27 +149,38 @@
     z-index: 100;
     position: absolute;
     border: 10px solid #fff;
-    width: 586px;
+    width: 506px;
     height: 306px;
     top: 0;
-    margin-left: 464px;
+    margin-left: 346px;
     margin-top: 48px; }
 
   #content_01 {
     max-width: 1200px;
     margin: 0 auto;
-    width: 100%;
+    width: 960px;
     height: 444px;
     background-color: #f07; }
-    #content_01 div {
-      max-width: 1200px;
-      width: 100%;
-      height: 136px;
+    #content_01 .textBox_01 {
+      width: 960px;
+      height: 160px;
       background-color: #fff; }
+      #content_01 .textBox_01 h2 {
+        font-size: 40px;
+        font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #006769;
+        padding-left: 388px;
+        padding-top: 45px; }
+      #content_01 .textBox_01 h3 {
+        font-size: 20px;
+        font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #6d6e6f;
+        text-align: center;
+        margin-top: 12px; }
     #content_01 ul {
       max-width: 1200px;
       width: 100%;
-      height: 308px;
+      height: 284px;
       background-color: #8f7; }
       #content_01 ul li {
         max-width: 1200px;
@@ -112,6 +188,40 @@
         height: 308px;
         background-color: #29aae1;
         float: left; }
+        #content_01 ul li div {
+          background-color: #fff; }
+        #content_01 ul li div:nth-of-type(1) {
+          width: 100%;
+          height: 36%; }
+        #content_01 ul li div:nth-of-type(2) {
+          font-size: 3.66667vw;
+          font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+          text-align: center;
+          line-height: 2.5;
+          height: 20%; }
+        #content_01 ul li div:nth-of-type(3) {
+          display: block;
+          height: 44%; }
+        #content_01 ul li .icon_01 {
+          background-size: 50%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_01.jpg"); }
+        #content_01 ul li .icon_02 {
+          background-size: 40%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_02.jpg"); }
+        #content_01 ul li .icon_03 {
+          background-size: 40%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_03.jpg"); }
+        #content_01 ul li .icon_04 {
+          background-size: 40%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_04.jpg"); }
 
   #content_02 {
     max-width: 1200px;
