--- a/portfolio/seoul_asan_hospital/css/src/tab.css
+++ b/portfolio/seoul_asan_hospital/css/src/tab.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @media screen and (min-width: 640px) and (max-width: 959px) {
   #headBox {
     width: 100%;
@@ -39,6 +40,9 @@
         font-size: 50px;
         color: #518b8d; }
 
+  #navi {
+    display: none; }
+
   #addBanner {
     width: 100%;
     min-height: 300px;
@@ -48,6 +52,39 @@
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("../../img/src/ban_640.jpg"); }
+    #addBanner h2 {
+      position: absolute;
+      margin-top: 8.6666667vw; }
+      #addBanner h2 p {
+        font-size: 3.59375vw;
+        font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #fff;
+        margin-left: 51.5625vw; }
+        #addBanner h2 p:nth-of-type(1), #addBanner h2 p:nth-of-type(2) {
+          display: block;
+          position: absolute;
+          left: -16%;
+          margin-top: 8.375vw;
+          color: #006769;
+          z-index: 100; }
+        #addBanner h2 p:nth-of-type(2) {
+          margin-top: 12.625vw; }
+    #addBanner h3 {
+      position: absolute;
+      margin-top: 17.8125vw; }
+      #addBanner h3 p {
+        font-weight: 200;
+        font-size: 2.425vw;
+        font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #fff;
+        margin-left: 51.5625vw; }
+    #addBanner h4 {
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 11.375vw;
+      font-size: 3.125vw;
+      font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+      margin-left: 51.5625vw; }
     #addBanner .whiteBox {
       width: 50%;
       height: 100%;
@@ -77,12 +114,24 @@
 
   #content_01 {
     width: 100%;
-    height: 50vw;
+    height: 62.5vw;
     background-color: #f07; }
-    #content_01 div {
+    #content_01 .textBox_01 {
       width: 100vw;
-      height: calc(100% - 34.375vw);
+      height: calc(100% - 40.375vw);
       background-color: #fff; }
+      #content_01 .textBox_01 h2 {
+        font-size: 6.25vw;
+        font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #006769;
+        padding-left: 35vw;
+        padding-top: 4.6875vw; }
+      #content_01 .textBox_01 h3 {
+        font-size: 2.8vw;
+        font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #6d6e6f;
+        text-align: center;
+        margin-top: 12.5625px; }
     #content_01 ul {
       width: 100vw;
       min-height: 220px;
@@ -90,16 +139,52 @@
       background-color: #8f7; }
       #content_01 ul li {
         width: 25%;
-        height: 34.375vw;
+        height: 40.375vw;
         background-color: #29aae1;
         float: left; }
+        #content_01 ul li div {
+          background-color: #fff;
+          text-align: center; }
+        #content_01 ul li div:nth-of-type(1) {
+          width: 100%;
+          height: 40%; }
+        #content_01 ul li div:nth-of-type(2) {
+          font-size: 3.8125vw;
+          font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+          height: 20%; }
+        #content_01 ul li div:nth-of-type(3) {
+          display: block;
+          font-size: 2.5vw;
+          font-family: "YDIYGO320", arial, nanumGothic, "돋움", dotum, sans-serif;
+          height: 40%;
+          color: #6d6e6f; }
+        #content_01 ul li .icon_01 {
+          background-size: 55%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_01.jpg"); }
+        #content_01 ul li .icon_02 {
+          background-size: 45%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_02.jpg"); }
+        #content_01 ul li .icon_03 {
+          background-size: 45%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_03.jpg"); }
+        #content_01 ul li .icon_04 {
+          background-size: 45%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_04.jpg"); }
 
   #content_02 {
     border-top: 4px solid #b3d6d2;
     border-bottom: 4px solid #b3d6d2;
     width: 100%;
     min-height: 320px;
-    height: 50vw; }
+    height: 62.5vw; }
     #content_02 div {
       width: 100vw;
       height: calc(100% - 35.95375vw);
@@ -120,7 +205,7 @@
     border-bottom: 4px solid #b3d6d2;
     width: 100%;
     min-height: 320px;
-    height: 50vw;
+    height: 62.5vw;
     background-color: #fff; }
     #content_03 ul {
       width: 50%;
