--- a/portfolio/seoul_asan_hospital/scss/mob.scss
+++ b/portfolio/seoul_asan_hospital/scss/mob.scss
@@ -2,6 +2,9 @@
 @import "_mixin";
 
 @media screen and (max-width:639px){
+	#abd{@include font340(34px);
+		 @include after;
+		 @include opacity;}
 	#headBox{
 		width:100%;
 		min-height:60px;
@@ -48,7 +51,7 @@
 			  }
 			}
 	}
-
+	#navi{display:none;}
 	#addBanner{
 		width:100%;
 		min-height:240px;
@@ -61,7 +64,27 @@
 			position:center}
 		position:relative;
 		@include b-set();
-		h2{@include font310(6.666667vw);color:#fff;}
+		h2{position:absolute;margin-top:8.6666667vw;
+			p:nth-of-type(1),p:nth-of-type(2){display:none;}
+			p{
+				@include font330(6.666667vw);
+				color:#fff;
+				margin-left:16.66666667vw;}
+			 }
+		h3{ position:absolute;
+			margin-top:25.3333333vw;
+			p{
+			font-weight:200;
+			@include font310(4.6666667vw);
+			color:#fff;
+			margin-left:16.66666667vw;}
+			}
+		h4{ position:absolute;
+			bottom:0;
+			margin-bottom:10.55555556vw;
+			@include font340(4.44444444vw);
+			margin-left:16.66666667vw;
+		}
 	}
 	#addBanner::after{
 		@include after();
@@ -70,30 +93,59 @@
 		min-height:200px;
 		height:55.5555556vw;
 		margin-top:3.88888889vw;
-		margin-left:1.888888vw;
-		left:0;
-	}
+		margin-left:3.6666667vw;
+		left:0;}
+		//addBanner::after
+
 	#content_01{
 		width:100%;
 		height:122.2222222vw;
-		background:{color:#f07;}
+		background:{color:#fff;}
 		@include b-set();
-		div{
+		.textBox_01{
+					h2{
+						@include font340(7.7777778vw);
+						color:$g_font;
+						padding-left:30.88888889vw;
+						padding-top:5.555555556vw;}
+			
+					h3{
+						@include font310(3.3333333vw);
+						color:$b_font;
+						text-align:center;
+						margin-top:10px;}
 			width:100vw;
 			height:calc(100% - 90vw);
-			background-color:#fff;
-		}
-		ul{	width:100vw;
-			height:90vw;
-			background-color:#8f7;
+			background-color:#fff;}
 		
-		li{width:50vw;
-		   height:45vw;
-		   background-color:$imc;
-		   float:left;}
+				ul{	width:100vw;
+					height:90vw;
+					background-color:#8f7;
+		
+				li{ width:50vw;
+		   			height:45vw;
+		   			background-color:$imc;
+		   			float:left;
+		   			div{background-color:#fff}
+		   			div:nth-of-type(1){width:100%;
+		   				height:60%
+		   				}
+		   			div:nth-of-type(2){@include font330(6.666667vw);
+		   							   text-align:center;line-height:2.5;
+		   							   height:40%;}
+		   			div:nth-of-type(3){display:none;}
+		   			.icon_01{
+		   				@include back("../../img/src/icon_01.jpg",50%)};
+		   			.icon_02{
+		   				@include back("../../img/src/icon_02.jpg",40%)};
+		   			.icon_03{
+		   				@include back("../../img/src/icon_03.jpg",40%)};	
+		   			.icon_04{
+		   				@include back("../../img/src/icon_04.jpg",40%)};		   					   			
+		   		}
 		}
 
-	}
+	}//content_01
 	#content_02{
 		@include b-set();
 		width:100%;
@@ -114,7 +166,7 @@
 			float:left;}
 		}
 
-	}
+	}//#content_02
 	
 
 	#content_03{
@@ -129,14 +181,14 @@
 			margin-top:63.8888889vw;
 		li{width:100vw;height:33.33333334%;background-color:$e9}
 		}
-	}
+	}//content_03
 	#articleBox{
 		@include b-set();
 		width:100%;
 		min-height:300px;
 		height:83.33333333vw;
 		background:{color:$ic;};
-	}
+	}//articleBox
 	#articleBox::after{
 		
 		@include after();
@@ -147,7 +199,7 @@
 		margin-left:1.7777778vw;
 
 
-	}
+	}//articleBox::after
 	
 	#articleTab{
 		@include b-set();
@@ -159,7 +211,7 @@
 		ul{width:100%;height:100%;
 		li{width:100%;height:33.333334%;}
 	}
-}
+}//articleTab
 	
 	#footBox{
 		width:100%;
@@ -169,7 +221,7 @@
 		.snb{width:100%;
 			height:16.6666667vw;
 			background-color:$ef;}
-	}
+	}//footBox
 
 
 //media screen
