--- a/portfolio/seoul_asan_hospital/css/src/mob.css
+++ b/portfolio/seoul_asan_hospital/css/src/mob.css
@@ -2,16 +2,7 @@
 @media screen and (max-width: 639px) {
   #abd {
     font-size: 34px;
-    font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
-    content: "";
-    display: block;
-    z-index: 100;
-    position: absolute;
-    -webkit-opacity: 1;
-    -moz-opacity: 1;
-    -o-opacity: 1;
-    opacity: 1; }
-
+    font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif; }
   #headBox {
     width: 100%;
     min-height: 60px;
@@ -33,7 +24,6 @@
         background-repeat: no-repeat;
         background-position: center;
         background-image: url("../../img/src/logo_360.jpg"); }
-
   #menu {
     width: 34px;
     height: 24px;
@@ -44,7 +34,6 @@
     #menu i {
       font-size: 40px;
       color: #518b8d; }
-
   #home {
     width: 34px;
     height: 24px;
@@ -55,6 +44,7 @@
     #home i {
       font-size: 40px;
       color: #518b8d; } }
+
 #navi {
   display: none; }
 
@@ -151,7 +141,8 @@
         font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
         text-align: center;
         line-height: 2.5;
-        height: 40%; }
+        height: 40%;
+        color: #006769; }
       #content_01 ul li div:nth-of-type(3) {
         display: none; }
       #content_01 ul li .icon_01 {
@@ -180,19 +171,64 @@
   border-bottom: 2px solid #b3d6d2;
   width: 100%;
   height: 122.2222222vw; }
-  #content_02 div {
+  #content_02 .textBox_02 {
     width: 100vw;
     height: calc(100% - 96.6666667vw);
     background-color: #ecf7f6; }
+    #content_02 .textBox_02 h2 {
+      font-size: 7.77778vw;
+      font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #006769;
+      padding-left: 12.77777778vw;
+      padding-top: 5.555555556vw; }
+    #content_02 .textBox_02 h3 {
+      font-size: 3.33333vw;
+      font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+      color: #6d6e6f;
+      text-align: center;
+      margin-top: 10px; }
   #content_02 ul {
     width: 100vw;
     height: 96.6666667vw;
-    background-color: #8f7; }
+    background-color: #ecf7f6; }
     #content_02 ul li {
       width: 50vw;
       height: 48.3333334vw;
-      background-color: #fff;
+      background-color: #ecf7f6;
       float: left; }
+      #content_02 ul li a {
+        width: 100%;
+        height: 100%; }
+        #content_02 ul li a div {
+          width: 100%;
+          height: 60%; }
+        #content_02 ul li a .icon_05 {
+          background-size: 57%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_05.png"); }
+        #content_02 ul li a .icon_06 {
+          background-size: 57%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_06.png"); }
+        #content_02 ul li a .icon_07 {
+          background-size: 57%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_07.png"); }
+        #content_02 ul li a .icon_08 {
+          background-size: 57%;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-image: url("../../img/src/icon_08.png"); }
+        #content_02 ul li a h4 {
+          width: 100%;
+          text-align: center;
+          font-size: 5.33333vw;
+          font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+          line-height: 2.5;
+          color: #006769; }
 
 #content_03 {
   border-top: 2px solid #b3d6d2;
@@ -253,5 +289,3 @@
     width: 100%;
     height: 16.6666667vw;
     background-color: #efefef; }
-
-/*# sourceMappingURL=mob.css.map */
