--- a/portfolio/seoul_asan_hospital/css/src/tab.css
+++ b/portfolio/seoul_asan_hospital/css/src/tab.css
@@ -39,10 +39,8 @@
       #headBox #home i {
         font-size: 50px;
         color: #518b8d; }
-
   #navi {
     display: none; }
-
   #addBanner {
     width: 100%;
     min-height: 300px;
@@ -99,7 +97,6 @@
         background-color: #fff;
         float: right;
         margin-top: 3.125vw; }
-
   #addBanner::after {
     content: "";
     display: block;
@@ -111,7 +108,6 @@
     height: 34.375vw;
     margin-top: 3.125vw;
     margin-left: 34vw; }
-
   #content_01 {
     width: 100%;
     height: 62.5vw;
@@ -121,10 +117,10 @@
       height: calc(100% - 40.375vw);
       background-color: #fff; }
       #content_01 .textBox_01 h2 {
-        font-size: 6.25vw;
+        font-size: 5.25vw;
         font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
         color: #006769;
-        padding-left: 35vw;
+        padding-left: 36vw;
         padding-top: 4.6875vw; }
       #content_01 .textBox_01 h3 {
         font-size: 2.8vw;
@@ -178,28 +174,70 @@
           background-repeat: no-repeat;
           background-position: center;
           background-image: url("../../img/src/icon_04.jpg"); }
-
   #content_02 {
     border-top: 4px solid #b3d6d2;
     border-bottom: 4px solid #b3d6d2;
     width: 100%;
-    min-height: 320px;
-    height: 62.5vw; }
-    #content_02 div {
+    height: 54.6875vw; }
+    #content_02 .textBox_02 {
       width: 100vw;
-      height: calc(100% - 35.95375vw);
+      height: calc(18.75vw);
       background-color: #ecf7f6; }
+      #content_02 .textBox_02 h2 {
+        font-size: 5.25vw;
+        font-family: "YDIYGO340", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #006769;
+        padding-left: 24vw;
+        padding-top: 4.6875vw; }
+      #content_02 .textBox_02 h3 {
+        font-size: 2.8vw;
+        font-family: "YDIYGO310", arial, nanumGothic, "돋움", dotum, sans-serif;
+        color: #6d6e6f;
+        text-align: center;
+        margin-top: 10px; }
     #content_02 ul {
       width: 100vw;
-      min-height: 230px;
-      height: 35.95375vw;
-      background-color: #8f7; }
+      min-height: 200px;
+      height: 31.25vw;
+      background-color: #ecf7f6; }
       #content_02 ul li {
         width: 25%;
         height: 35.95375vw;
-        background-color: #fff;
+        background-color: #ecf7f6;
         float: left; }
-
+        #content_02 ul li a {
+          width: 100%;
+          height: 100%; }
+          #content_02 ul li a div {
+            width: 100%;
+            height: 60%; }
+          #content_02 ul li a .icon_05 {
+            background-size: 72%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image: url("../../img/src/icon_05.png"); }
+          #content_02 ul li a .icon_06 {
+            background-size: 72%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image: url("../../img/src/icon_06.png"); }
+          #content_02 ul li a .icon_07 {
+            background-size: 72%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image: url("../../img/src/icon_07.png"); }
+          #content_02 ul li a .icon_08 {
+            background-size: 72%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image: url("../../img/src/icon_08.png"); }
+          #content_02 ul li a h4 {
+            width: 100%;
+            text-align: center;
+            font-size: 3.2vw;
+            font-family: "YDIYGO330", arial, nanumGothic, "돋움", dotum, sans-serif;
+            line-height: 4;
+            color: #006769; }
   #content_03 {
     border-top: 4px solid #b3d6d2;
     border-bottom: 4px solid #b3d6d2;
@@ -224,7 +262,6 @@
       margin-top: 7.8125vw;
       float: right;
       background-color: #ccc; }
-
   #articleBox {
     border-top: 2px solid #b3d6d2;
     border-bottom: 2px solid #b3d6d2;
@@ -232,7 +269,6 @@
     min-height: 420px;
     height: 65.625vw;
     background-color: #518b8d; }
-
   #articleBox::after {
     content: "";
     display: block;
@@ -245,7 +281,6 @@
     height: 56.875vw;
     margin-top: 22px;
     margin-left: 3.75vw; }
-
   #articleTab {
     border-top: 2px solid #b3d6d2;
     border-bottom: 2px solid #b3d6d2;
@@ -259,7 +294,6 @@
       #articleTab ul li {
         width: 100%;
         height: 33.333334%; }
-
   #footBox {
     width: 100%;
     min-height: 180px;
@@ -270,5 +304,3 @@
       min-height: 60px;
       height: 9.375vw;
       background-color: #aaa; } }
-
-/*# sourceMappingURL=tab.css.map */
