--- a/portfolio/seoul_asan_hospital/scss/pc.scss
+++ b/portfolio/seoul_asan_hospital/scss/pc.scss
@@ -2,7 +2,7 @@
 
 @import "_mixin";
 
-@media screen and (min-width:960px) and (max-width:2560px){
+@media screen and (min-width:960px) and (max-width:2560px) {
 	#headBox{
 		@include max;
 		margin:0 auto;
@@ -18,8 +18,8 @@
 				background-color:#fff;
 				left:50%;
 				margin-left:-50vw;}
-			#menu{display:none;}
-			#home{display:none;}
+			>#menu{display:none;}
+			>#home{display:none;}
 				
 		h1{min-width:120px;
 		   min-width:230px;
@@ -31,17 +31,20 @@
 			a{display:block;
 			  width:100%;
 			  height:100%;
-			  @include back("../../img/src/logo_640.jpg",100%);}
-		}
-	}
+			  @include back("../../img/src/logo_640.jpg",100%);
+
+		} // #headBox > h1 >a
+	
+		}//h1
+	}//#headBox
 	#navi{@include max;
 		width:960px;
 		height:100px;
 		background:{color:$lgc};
 		margin:0 auto;
 		display:block;
-			ul{width:100%;height:100%;
-				li{ position:relative;
+			>ul{width:100%;height:100%;
+				>li{ position:relative;
 					&:nth-child(1){margin-left:14px;}
 					@include font330(20px);
 					float:left;
@@ -58,8 +61,8 @@
 							right:0px;
 							margin-right:-10px;}
 					color:$ic;}
-			}
-	}
+			}//#navi>ul
+	}//#navi
 
 	#navi::after{	
 					@include after(-100);
@@ -103,12 +106,12 @@
 		}
 
 
-		.whiteBox{width:206px;
+		>.whiteBox{width:206px;
 				  height:100%;
 				  float:left;
 				  margin-left:276px;
 		
-			.textBanner{
+			>.textBanner{
 						@include opacity(0.7);
 						width:126px;
 						height:306px;
@@ -116,10 +119,12 @@
 						margin-top:58px;
 						float:right;
 
-		}
-	}
+			}//#addBanner >.whiteBox >textBanner
 
-}
+		}//#addBanner >.whiteBox
+
+	}//#addBanner
+	
 	#addBanner::after{
 		@include after();
 	 	border:10px solid #fff;
@@ -150,9 +155,9 @@
 			color:$b_font;
 			text-align:center;
 			margin-top:12px}
-
 		
-	}
+		} //textBox_01
+		
 		ul{	@include max;
 			width:100%;
 			height:284px;
@@ -163,25 +168,30 @@
 		   height:284px;
 		   background-color:$imc;
 		   float:left;
-		   			div{background-color:#fff}
-		   			div:nth-of-type(1){width:100%;
-		   				height:36%
-		   				}
-		   			div:nth-of-type(2){@include font330(3.666667vw);
-		   							   text-align:center;line-height:2.5;
-		   							   height:20%;}
-		   			div:nth-of-type(3){display:block;height:44%;}
+   			div{background-color:#fff;}
+	   			div:nth-of-type(1){width:100%;
+   				height:36%}//div(1)
+	   			div:nth-of-type(2){
+   				@include font330(34px);
+   				text-align:center;
+   				line-height:2.5;
+   				height:20%;}
+	   			div:nth-of-type(3){display:block;height:44%;padding-top:20px;
+					p{	&:nth-of-type(1){text-align:center;}	}//p
+
 		   			.icon_01{
-		   				@include back("../../img/src/icon_01.jpg",50%)};
+		   				@include back("../../img/src/icon_01.jpg",50%);}
 		   			.icon_02{
-		   				@include back("../../img/src/icon_02.jpg",40%)};
+		   				@include back("../../img/src/icon_02.jpg",40%);}
 		   			.icon_03{
-		   				@include back("../../img/src/icon_03.jpg",40%)};	
+		   				@include back("../../img/src/icon_03.jpg",40%);}
 		   			.icon_04{
-		   				@include back("../../img/src/icon_04.jpg",40%)};		
-		}
+		   				@include back("../../img/src/icon_04.jpg",40%);}	
+				}//div(3)
 		
-		}
+			}// li
+
+		}//ul
 
 	}
 	#content_02{
@@ -190,25 +200,56 @@
 		margin:0 auto;
 		width:100%;
 		height:452px;
-		div{
-			width:100%;
-			height:130px;
-			background-color:$lgc;};
-		ul{
-			width:100%;
-			height:322px;
+			
+		.textBox_02{
+			width:100vw;
+			height:120px;
+			background-color:$lgc;
+
+			h2{	@include font340(40px);
+			color:$g_font;
+			padding-left:388px;
+			padding-top:25px;
+			}; //h2
+				
+				h3{
+					@include font310(2.8vw);
+					color:$b_font;
+					text-align:center;
+					margin-top:10px;}
+			};
+
+		div{width:100%;
+			height:332px;
+			background-color:$lgc;} //div
+		ul{ width:100%;
+			height:332px;
 			background-color:#8f7;
 		
 		li{
 			width:25%;
-			height:322px;
+			height:332px;
 			background-color:#fff;
-			float:left;}
-		}
+			float:left;}//li
+			a{width:100%;height:100%;
+				
+				div{width:100%;height:60%;} //div
+					
+					.icon_05{@include back("../../img/src/icon_05.png",72%);}
+					.icon_06{@include back("../../img/src/icon_06.png",72%);}
+					.icon_07{@include back("../../img/src/icon_07.png",72%);}
+					.icon_08{@include back("../../img/src/icon_08.png",72%);}
+			
+				h4{width:100%;
+					text-align:center;
+					@include font330(3.2vw);line-height:4;
+					color:$g-font;}
+						
+					}//a
+				
 
-	}
-	
-
+				}//li
+			}//ul
 	#content_03{
 		@include max;
 		@include b-set(4px);
@@ -225,16 +266,17 @@
 			width:100%;
 			height:33.33333334%;
 			background-color:$e9;
-			}
-		}
+			} //li
+		}//ul
 		.imgBox{ @include max;
 			width:50%;
 			height:100%;
 			float:right;
 			background-color:#ccc;
 			
-		}
-	}
+		}// .imgBox
+	}// #content_03
+
 	#content_04{@include max;
 				width:100%;
 				height:400px;
@@ -246,7 +288,7 @@
 		height:400px;
 		background:{color:$ic};
 		float:left;
-	}
+	}// #articleBox
 	 #articleBox::after{
 		
 	 	@include after();
@@ -263,12 +305,12 @@
 		@include b-set();
 		width:50%;
 		height:400px;
-		background:{color:$blc};
+		background-color:$blc;
 		float:right;
 		ul{width:100%;height:420px;
-		li{width:100%;height:33.333334%;}
-	}
-}
+			li{width:100%;height:33.333334%;}
+		}//ul
+	}//#articleTab
 	
 	#footBox{
 		@include max;
@@ -279,8 +321,8 @@
 		.snb{margin:0 auto;
 			width:100%;
 			height:100px;
-			background-color:#aaa;
-		}
-	}
-
+			background-color:#aaa;}//.snb
+	 
+	  }//#footBox
+	
 }//media screen
