--- a/portfolio/seoul_asan_hospital/scss/tab.scss
+++ b/portfolio/seoul_asan_hospital/scss/tab.scss
@@ -107,9 +107,9 @@
 		background:{color:#f07;}
 		.textBox_01{
 			h2{
-			@include font340(6.25vw);
+			@include font340(5.25vw);
 			color:$g_font;
-			padding-left:35vw;
+			padding-left:36vw;
 			padding-top:4.6875vw;}
 			
 			h3{
@@ -153,28 +153,58 @@
 	#content_02{
 		@include b-set(4px);
 		width:100%;
-		min-height:320px;
-		height:62.5vw;
-		div{
+		height:54.6875vw;
+
+		.textBox_02{
 			width:100vw;
-			height:calc(100% - 35.95375vw);
-			background-color:$lgc;};
+			height:calc(18.75vw);
+			background-color:$lgc;
+				h2{	@include font340(5.25vw);
+					color:$g_font;
+					padding-left:24vw;
+					padding-top:4.6875vw;
+				
+				};//h2
+				
+				h3{
+					@include font310(2.8vw);
+					color:$b_font;
+					text-align:center;
+					margin-top:10px;}
+			};
+
 		ul{
 			width:100vw;
-			min-height:230px;
-			height:35.95375vw;
-			background-color:#8f7;
+			min-height:200px;
+			height:31.25vw;
+			background-color:$nav;
 		
 		li{
 			width:25%;
 			height:35.95375vw;
-			background-color:#fff;
-			float:left;}
-		}
+			background-color:$nav;
+			float:left;
+			
+			a{width:100%;height:100%;
+				
+				div{width:100%;height:60%;} //div
+					
+					.icon_05{@include back("../../img/src/icon_05.png",72%);}
+					.icon_06{@include back("../../img/src/icon_06.png",72%);}
+					.icon_07{@include back("../../img/src/icon_07.png",72%);}
+					.icon_08{@include back("../../img/src/icon_08.png",72%);}
+			
+				h4{width:100%;
+					text-align:center;
+					@include font330(3.2vw);line-height:4;
+					color:$g-font;}
+						
+					}//a
+				
 
-	}
-	
-
+				}//li
+			}//ul
+		}//#content_02
 	#content_03{
 		@include b-set(4px);
 		width:100%;
