--- a/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
+++ b/portfolio/seoul_asan_hospital/public/src/scss/tab.scss
@@ -6,7 +6,7 @@
 	#headBox{
 		width:100%;
 		height:80px;
-		background:{color:#fff;}
+		background:{color:#fff}
 		h1{min-width:120px;
 		   width:33.3333333vw;
 		   height:80px;
@@ -135,31 +135,32 @@
 					height:34.375vw;
 					background-color:#8f7;
 	
-			>li{width:25%
+			>li{width:25%;
 				height:40.375vw;
-   				background-color:$imc;
+   				background-color:$ic;
    				float:left;
-				.sizeBox{width:50vw;
-						 min-height:360px;
-						 height:50vw;
+				.sizeBox{width:100%;
 					>li{width:100%;
 						height:40%;
 						background-color:#fff;}
    				.icon_01{
-   					@include back("../../img/src/icon_01.jpg",50%);}
+   					@include back("../../img/src/icon_01.jpg",60%);}
    				.icon_02{
-   					@include back("../../img/src/icon_02.jpg",40%);}
+   					@include back("../../img/src/icon_02.jpg",45%);}
    				.icon_03{
-   					@include back("../../img/src/icon_03.jpg",40%);}	
+   					@include back("../../img/src/icon_03.jpg",45%);}	
    				.icon_04{
-   					@include back("../../img/src/icon_04.jpg",40%);}	
+   					@include back("../../img/src/icon_04.jpg",45%);}	
 				h4{
 					@include font330(3.8125vw);
-					height:20%;}
+					height:20%;
+					text-align:center;
+					margin-top:15px;}
 				h5{display:block;
 				   @include font320(2.5vw);
 				   height:40%;
-				   color:$b_font;}//.sizeBox
+				   color:$b_font;
+				   text-align:center;}//.sizeBox
    		
 		   		} //sizeBox
 			} //li
